# Intelligent-Medical-Report-Analysis-System-with-AI-Diagnosis-RAG-Based-Insights-

./: .replit  pyproject.toml  replit.md
Notebooks/: brainTumor_v3.ipynb  pneumonia_classification_v2.ipynb
app/: glossary.py  main.py  ml.py  organs.py  rag.py  risk.py  symptoms.py
app/static/: app.js  body3d.js  glossary.js  styles.css
app/templates/: base.html  chat.html  image_analysis.html  index.html  report_analyzer.html  symptom_checker.html
attached_assets/: Pasted-AI-service-is-temporarily-unavailable-Please-try-again-_1777028092894.txt  Pasted-Here-s-an-explanation-of-the-cardiology-report-in-plain_1777028265586.txt
